TreeAnalysis/Plot/Temp3/SR_compare_red_bkg.txt
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_SR/WWWJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_SR/TTWJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_SR/TTGJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_SR/DYJetsToLLTuneZ2M10.root therefore preventing schema evolution when reading this file.
Info in <TCanvas::Print>: file Stack_SR_compare_red_bkg.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_compare_red_bkg.root has been created

######### Contribution to fake rate #########

DoubleMu .......................... 3.23906210612
DoubleEle .......................... 2.72710878076
MuEG .......................... 0.0563635145081
                                __________________ 

Irreducible background---------->  6.02253439499 


######### MonteCarlo samples #########

WWWJets  has no enetries or is a zombie
WZ .......................... 0.595393285155
TTTo2L2Nu2B .......................... 0.128173585981
TTWJets  has no enetries or is a zombie
TTGJets  has no enetries or is a zombie
DYJetsToLLTuneZ2M50 .......................... 2.0440299511
DYJetsToLLTuneZ2M10  has no enetries or is a zombie

######### Data #########

DoubleMu .......................... 108.0
DoubleEle .......................... 179.0
MuEG .......................... 1.0
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 42, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
